Fix draggable and add z-index control on click

--- a/style.css
+++ b/style.css
@@ -137,7 +137,8 @@ a:hover::before {
     bottom: 0;
     left: 0;
     background-color: var(--bg-color);
-    z-index: 999;
+    /* z-index: 999; */
+    z-index: 1;
 }
 
 #header::after {
@@ -503,10 +504,6 @@ em.light-font,
     display: none;
 }
 
-.page-items-list-title {
-    margin-bottom: 20px;
-}
-
 .item {
     margin-bottom: 8px;
 }
@@ -530,7 +527,6 @@ em.light-font,
     position: absolute;
     top: var(--random-top);
     left: var(--random-left);
-    z-index: 999;
     background-color: var(--bg-color);
     overflow-y: scroll;
     opacity: 0;
@@ -539,9 +535,8 @@ em.light-font,
     border: solid 1px var(--txt-color);
     -webkit-box-shadow: 0 0 15px 5px var(--bg-color);
     box-shadow: 0 0 15px 5px var(--bg-color);
-    -webkit-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    cursor: move;
+    z-index: 1;
 }
 
 .item-content.open {
@@ -835,6 +830,14 @@ em.light-font,
         width: 100%;
         top: 0 !important;
         left: 0 !important;
+        flex-direction: column;
+        padding-top: 40px;
+    }
+
+    .item-content-close {
+        position: absolute;
+        top: 0;
+        right: 0;
     }
 
 }
